grammars/ocaml/grammar.js
    compilation_unit: $ => seq(
      optional($.shebang),
      optional($._structure)
    ),

    _structure: $ => choice(
      repeat1(';;'),
      seq(
        repeat(';;'),
        choice($._structure_item, $.toplevel_directive, $.expression_item),
        repeat(choice(
          seq(repeat(';;'), choice($._structure_item, $.toplevel_directive)),
          seq(repeat1(';;'), $.expression_item)
        )),
        repeat(';;')
      )
    ),

    expression_item: $ => seq(
      $._sequence_expression,
      repeat($.item_attribute)
    ),

    value_definition: $ => seq(
      choice(seq('let', optional($._attribute), optional('rec')), $.let_operator),
      sep1(choice('and', $.let_and_operator), $.let_binding)
    ),

    let_binding: $ => prec.right(seq(
      choice(
        // A pattern. Examples:
        //    let x
        //    let (x @ local)
        //    let (x, y)
        // We cannot allow exception patterns here because that would create a
        // conflict: when encountering [let exception], the parser wouldn't be
        // able to determine whether the code is a [$.let_exception_expression]
        // or an [$.exception_pattern] inside a [$.let_binding].
        field('pattern', $._pattern_no_exception),
        // Legacy modes followed by an identifier or a parenthesized operator.
        // Examples:
        //    let local_ x
        //    let local_ ( + )
        seq(
          $._mode_expr_legacy,
          field('pattern', $._value_name)
        ),
      ),
      optional(choice(
        $.at_mode_expr,
        seq(
          repeat($._parameter),
          optional(choice(
            $._maybe_polymorphic_typed_with_optional_modes,
            $.at_mode_expr
          )),
          optional($._coerced),
          '=',
          field('body', $._sequence_expression)
        )
      )),
      repeat($.item_attribute)
    )),

    _parameter: $ => choice(
      $.parameter,
      alias(
        $._parenthesized_abstract_types_with_optional_jkind_annotations,
        $.abstract_types
      )
    ),

    type_definition: $ => seq(
      'type',
      optional($._attribute),
      optional('nonrec'),
      sep1('and', $.type_binding)
    ),

    type_binding: $ => seq(
      optional($._type_params),
      choice(
        seq(
          field('name', $._type_constructor),
          optional($._jkind_annotation),
          optional(seq(
            '=',
            $._type_binding_body
          )),
          repeat($.type_constraint)
        ),
        seq(
          field('name', $.type_constructor_path),
          seq(
            '+=',
            optional('private'),
            field('body', $.variant_declaration)
          )
        )
      ),
      repeat($.item_attribute)
    ),

    _type_binding_body: $ => choice(
      seq(optional('private'), $._type),
      seq(
        optional($.type_synonym),
        optional('private'),
        field('body', choice(
          $.variant_declaration,
          $.record_declaration,
          '..'
        ))
      )
    ),

    _type_params: $ => choice(
      $._type_param,
      parenthesize(sep1(',', seq(
        $._type_param,
        optional($._jkind_annotation)
      )))
    ),

    _type_param: $ => seq(
      optional(choice(
        seq('+', optional('!')),
        seq('-', optional('!')),
        seq('!', optional(choice('+', '-')))
      )),
      choice($.type_variable, $._type_wildcard)
    ),

    _type_equation: $ => seq(
      choice(
        seq('=', optional('private')),
        ':='
      ),
      $._type
    ),

    module_type_definition: $ => seq(
      'module', 'type',
      optional($._attribute),
      field('name', $._module_type_name),
      optional(seq(choice('=', ':='), field('body', $._module_type))),
      repeat($.item_attribute)
    ),

    class_definition: $ => seq(
      'class', optional($._attribute),
      sep1('and', $.class_binding)
    ),

    class_binding: $ => prec.right(seq(
      optional('virtual'),
      optional(seq(
        '[',
        sep1(',', $._type_param),
        ']'
      )),
      field('name', $._class_name),
      repeat($._parameter),
      optional($._class_typed),
      optional(seq('=', field('body', $._class_expression))),
      repeat($.item_attribute)
    )),

    _module_type: $ => choice(
      $._simple_module_type,
      $.module_type_constraint,
      $.module_type_of,
      $.functor_type,
      $._extension
    ),

    module_type_constraint: $ => prec.right(seq(
      $._module_type,
      'with',
      sep1('and', choice(
        $.constrain_type,
        $.constrain_module,
        $.constrain_module_type,
        $.extended_module_path
      ))
    )),

    constrain_type: $ => seq(
      'type',
      optional($._type_params),
      $.type_constructor_path,
      $._type_equation,
      repeat($.type_constraint)
    ),

    _class_typed: $ => seq(':', $._class_type),

    _class_type: $ => choice(
      $._simple_class_type,
      $.class_function_type
    ),

    class_function_type: $ => prec.right(PREC.seq, seq(
      $._class_parameter_type,
      '->',
      $._class_type
    )),

    // This is the same as _parameter_type, but polymorphic types and legacy
    // modes are not allowed
    _class_parameter_type: $ => choice(
      alias($.class_typed_label, $.typed_label),
      $._tuple_type_without_leading_label
      // We can't have a tuple_type_with_leading_label here because any leading
      // label should be parsed as the label for the parameter, not for the
      // tuple. Example:
      //    l:t * l:t -> t
      // should be parsed as
      //    l:(t * l:t) -> t
    ),

    // This is the same as typed_label, but legacy modes are not allowed
    _class_expression: $ => choice(
      $._simple_class_expression,
      $.class_function,
      $.class_application,
      $.let_class_expression,
      $.let_open_class_expression
    ),

    _class_field: $ => choice(
      $.inheritance_definition,
      $.instance_variable_definition,
      $.method_definition,
      $.type_parameter_constraint,
      $.class_initializer,
      $._item_extension
    ),

    _typed: $ => seq(':', $._type),

    _maybe_polymorphic_typed_with_optional_modes: $ => choice(
      $._typed_with_optional_modes,
      $._polymorphic_typed_with_optional_modes
    ),

    _coerced: $ => seq(':>', $._type),

    // One or more abstract types. Does not allow layout annotations. Example:
    //    type t s
    _jkind_annotation: $ => seq(':', $.jkind),

    // TODO: Add these choices when they are fully implemented in
    // the language.
    //
    // seq(
    //   $.jkind,
    //   'mod',
    //   $.mode_expr
    // ),
    // seq(
    //   $.jkind,
    //   'with',
    //   $._type
    // ),
    // seq(
    //   'kind_of',
    //   $._type
    // )
    _simple_type: $ => choice(
      $.type_variable,
      $.type_constructor_path,
      $.unboxed_type_constructor_path,
      $.constructed_type,
      $.local_open_type,
      $.polymorphic_variant_type,
      $.package_type,
      $.hash_type,
      $.object_type,
      $.parenthesized_type,
      $.type_variable_with_jkind_annotation,
      $.type_wildcard_with_jkind_annotation,
      $._extension
    ),

    _type: $ => choice(
      $._tuple_type,
      $.function_type,
      $.aliased_type
    ),

    function_type: $ => seq(
      $._parameter_type,
      optional($.at_mode_expr),
      '->',
      choice(
        $.function_type,
        seq(
          optional($._mode_expr_legacy),
          $._tuple_type,
          optional($.at_mode_expr)
        )
      )
    ),

    _parameter_type: $ => choice(
      $.typed_label,
      $.polymorphic_typed_label,
      seq(
        optional($._mode_expr_legacy),
        $._tuple_type_without_leading_label
      ),
      // We can't have a tuple_type_with_leading_label here because any leading
      // label should be parsed as the label for the parameter, not for the
      // tuple. Example:
      //    l:t * l:t -> t
      // should be parsed as
      //    l:(t * l:t) -> t
      parenthesize($.polymorphic_type)
    ),

    typed_label: $ => seq(
      optional('?'),
      $._label_name,
      ':',
      optional($._mode_expr_legacy),
      $._tuple_type_without_leading_label
    ),

    _tuple_type: $ => prec(PREC.seq, choice(
      $._tuple_type_without_leading_label,
      $.tuple_type_with_leading_label
    )),

    // A tuple type of one or more elements such that the first element is
    // unlabeled
    _tuple_type_without_leading_label: $ => choice(
      $._simple_type,
      $.proper_tuple_type
    ),

    // A tuple type of at least two elements such that the first element is
    // labeled
    tuple_type_with_leading_label: $ => prec(PREC.seq, seq(
      $._label_name,
      ':',
      $.proper_tuple_type
    )),

    // A tuple type of at least two elements such that the first element is
    // unlabeled
    proper_tuple_type: $ => seq(
      $._simple_type,
      '*',
      sep1('*', $._tuple_type_element)
    ),

    _tuple_type_element: $ => prec(PREC.prod, seq(
      optional(seq(
        $._label_name,
        ':'
      )),
      $._simple_type
    )),

    parenthesized_type: $ => parenthesize($._type),

    // Expressions

    _sequence_expression: $ => choice(
      $._expression,
      $.sequence_expression
    ),

    product_expression: $ => prec.left(PREC.prod, seq(
      field('left', $._product_element),
      ',',
      field('right', $._product_element)
    )),

    _product_element: $ => prec(PREC.prod, choice(
      $._expression,
      seq(
        '~',
        $._label_name,
        optional(seq(
          token.immediate(':'),
          $._simple_expression
        ))
      ),
      seq(
        '~',
        '(',
        $._label_name,
        $._typed,
        ')'
      )
    )),

    _match_cases: $ => prec.right(seq(
      optional('|'),
      sep1('|', $.match_case)
    )),

    match_case: $ => seq(
      field('pattern', $._pattern),
      optional($.guard),
      '->',
      field('body', choice($._sequence_expression, $.refutation_case))
    ),

    function_expression: $ => prec.right(PREC.match, seq(
      'function',
      optional($._attribute),
      $._match_cases
    )),

    local_open_expression: $ => seq(
      $.module_path,
      '.',
      choice(
        parenthesize(optional($._sequence_expression)),
        $.list_expression,
        $.array_expression,
        $.iarray_expression,
        $.record_expression,
        $.object_copy_expression,
        $.package_expression
      )
    ),

    object_expression: $ => seq(
      'object',
      optional($._attribute),
      optional(parenthesize(seq(
        $._pattern,
        optional($._typed)
      ))),
      repeat(choice(
        $._class_field,
        $.floating_attribute
      )),
      'end'
    ),

    parenthesized_expression: $ => choice(
      seq(
        'begin',
        optional($._attribute),
        $._sequence_expression,
        'end'
      ),
      parenthesize($._sequence_expression)
    ),

    _pattern_no_exception: $ => choice(
      $._simple_pattern,
      $.alias_pattern,
      $.or_pattern,
      $.constructor_pattern,
      $.tag_pattern,
      $.tuple_pattern,
      $.cons_pattern,
      $.range_pattern,
      $.lazy_pattern
    ),

    _pattern: $ => choice(
      $._pattern_no_exception,
      $.exception_pattern
    ),

    or_pattern: $ => prec.left(PREC.seq, seq(
      $._pattern,
      '|',
      $._pattern
    )),

    tuple_pattern: $ => prec.left(PREC.prod, seq(
      $._tuple_pattern_element,
      ',',
      choice(
        $._tuple_pattern_element,
        '..'
      )
    )),

    _tuple_pattern_element: $ => prec(PREC.prod, choice(
      $._pattern,
      seq(
        '~',
        $._label_name,
        optional(seq(
          token.immediate(':'),
          $._simple_pattern
        ))
      ),
      seq(
        '~',
        '(',
        $._label_name,
        $._typed,
        ')'
      )
    )),

    local_open_pattern: $ => seq(
      $.module_path,
      '.',
      choice(
        parenthesize(optional($._pattern)),
        $.list_pattern,
        $.array_pattern,
        $.iarray_pattern,
        $.record_pattern
      )
    ),

    parenthesized_pattern: $ => parenthesize($._pattern),

    _attribute: $ => seq('%', $.attribute_id),

    // Constants

    unit: $ => choice(
      seq('(', ')'),
      seq('begin', optional($._attribute), 'end')
    ),

    // Operators

    _value_name: $ => choice(
      alias($._identifier, $.value_name),
      $.parenthesized_operator
    ),

    _mode_expr_legacy: $ => repeat1($.mode_legacy),

    value_path: $ => path($.module_path, $._value_name),

    module_path: $ => prec(1, path($.module_path, $._module_name)),

    module_type_path: $ => path($.extended_module_path, $._module_type_name),

    type_constructor_path: $ => choice(
      path($.extended_module_path, $._type_constructor),
      // For some reason, we have to explicitly add the below option, even
      // though it can be matched by the above option. If we don't include this
      // option, Tree-sitter won't be able to parse [type t = (_, t) t].
      //
      // TODO: Continue searching for a better solution.
      '_'
    ),

    class_type_path: $ => path($.extended_module_path, $._class_type_name),

    _label_name: $ => alias($._identifier, $.label_name),
    _class_name: $ => alias($._identifier, $.class_name),
    _class_type_name: $ => alias($._identifier, $.class_type_name),
    _type_constructor: $ => alias($._identifier, $.type_constructor),
    _module_name: $ => alias($._capitalized_identifier, $.module_name),
    _module_type_name: $ => alias(choice($._capitalized_identifier, $._identifier), $.module_type_name),
